[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/sprites/angelEyeSpreadsheet/diamond.png" type="Texture2D" id=1]
[ext_resource path="res://src/actors/Shooter.gd" type="Script" id=2]
[ext_resource path="res://src/projectiles/Bullet.tscn" type="PackedScene" id=3]

[node name="shooter" type="Node2D"]
script = ExtResource( 2 )
projectile = ExtResource( 3 )

[node name="Marker2D" type="Marker2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Marker2D"]
position = Vector2( -2.38419e-07, 0 )
rotation = -1.5708
scale = Vector2( 0.210161, 0.210161 )
texture = ExtResource( 1 )

[node name="reloadTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="shotsTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="timeout" from="reloadTimer" to="." method="isReloaded"]
[connection signal="timeout" from="shotsTimer" to="." method="shotDelay"]
